5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1573_994.log
== SUBMITION (2019-04-15 13:59:14) 
-- CODE:
print("Universidade Federal do Amazonas
		")
-- EXECUTION TIME:
0.14879
-- ERROR:
  File "/home/codebench/codes/1573/994/main.py", line 1
    print("Universidade Federal do Amazonas
                                          ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:59:26) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.156144
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
